--- a/css/styles.css
+++ b/css/styles.css
@@ -43,9 +43,32 @@ td:last-child {
 	color: white;
 }
 
-input[type="checkbox"] {
-	cursor: pointer;
+input[type="radio"] {
+	display: none;
 }
+
+.radio span {
+	position: relative;                                /* Относительное позиционирование */
+    display: inline-block;                             /* Строчно-блочный элемент */
+    width: 16px; height: 16px;                         
+    background: #F5F5F5;                               
+    border-radius: 50%;                                /* Круглый переключатель */
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.5);         /* Тень внутри */
+}
+
+.radio input:checked + span { 
+    background: #F44336;                               
+   }
+  
+ .radio input:checked + span::before {                 /* Добавляем белую точку по центру */
+    content: '';
+    position: absolute;
+    left: 50%; top: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    width: 50%; height: 50%;
+    border-radius: 50%;
+   }
 
 .btn {
 	width: 66px;
@@ -73,3 +96,4 @@ input::placeholder {
 	font-size: 110%;
 	color: #000000;
 }
+
