--- a/css/styles.css
+++ b/css/styles.css
@@ -19,14 +19,13 @@ table {
 }
 
 td:first-child {
-	background: #AFCDE7;
 	color: white;
 	padding: 15px 25px;
 	width: 8%;
 	border-radius: 4px 0 0 4px;
 }
 
-td {
+.td1 {
 	height: 35px;
 	border-style: solid;
 	border-width: 0 1px 1px 0;
@@ -35,6 +34,24 @@ td {
 	background: #D8E6F3;
 }
 
+
+.td2 {
+	height: 35px;
+	border-style: solid;
+	border-width: 0 1px 1px 0;
+	border-color: white;
+	padding: 12px 0;
+	background: #66FFB2;
+}
+
+.td3 {
+	height: 35px;
+	border-style: solid;
+	border-width: 0 1px 1px 0;
+	border-color: white;
+	padding: 12px 0;
+	background: #FF99FF;
+}
 
 td:last-child {
 	text-align: left;
@@ -70,13 +87,13 @@ input[type="radio"] {
     border-radius: 50%;
    }
 
+
 .btn {
 	width: 66px;
 	height: 35px;
 	background-color: #20B2AA;
 	border-radius: 3px;
 	text-decoration: none;
-	color: 000;
 	padding: 5px 20px;
 	cursor: pointer;
 	margin: 10px;
@@ -85,8 +102,9 @@ input[type="radio"] {
     border: 0;
 }
 
+
 input[type="text"] {
-	width: 29%;
+	width: 726px;
 	height: 40px;
 	margin-right: 15px;	
 	text-indent: 20px;
