--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,19 @@ input[type="radio"] {
     border-radius: 50%;
    }
 
+.btnsqr {
+	width: 18px;
+	height: 18px;
+	border-radius: 2px;
+	padding-top: 12px;
+	margin: 3px;
+	margin-left: -120px;
+	
+	cursor: pointer;
+	border: 0;
+	background: #f3ed97;
+	
+}
 
 .btn {
 	width: 66px;
@@ -108,6 +121,7 @@ input[type="text"] {
 	height: 40px;
 	margin-right: 15px;	
 	text-indent: 20px;
+
 }
 
 input::placeholder {
